--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
-# Está página esta creada en HTML
-
-## HTML
-
-HyperText Markun Languaje, es un lenguaje de hipertexto para poder hacer estructuras de                  páginas 
-
-## Etiquetas básicas
-
-```html
-<p>Este es un parrafo </p>
-<h1>TITULO MAS IMPORTANTE</h1>
-<h6>Titulo menos importante</h6>
-<p>Este es un parrafo </p>
-<br> salto de línea
-<!-- comentario -->
- <a href="Aquí.va.el.link" target="blank">Texto</a>
-
- <!-- width es la anchura y el height es la altura-->
- <img src="aquí va el link de la imagen" alt="Texto alternativo" width="350px" height="350px">
-
- <!-- tablas -->
-<table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <table>
         <tr>
             <th>Compañía</th>
             <th>Contacto</th>
@@ -59,5 +47,5 @@ HyperText Markun Languaje, es un lenguaje de hipertexto para poder hacer estruct
 
     </dl>
 
-```
-![]()
+</body>
+</html>
