--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Explicación de elementos compuestos LaunchX</h1>
+    <h1>Elemtos compuestos</h1>
 
     <!-- Labels / Etiquetas -->
     <label for="Input1"> Ejemplo de Input de Texto</label>
@@ -109,7 +109,7 @@
     <h2>Input de botón</h2>
     <input type="reset"><br>
     <input type="submit"><br>
-    <input type="button" id="boton1" name="boton1" value="Botón 1" onclick="alert('Bienvenidos explorers');"><br><br>
+    <input type="button" id="boton1" name="boton1" value="Botón 1" onclick="alert('Bienvenidos ');"><br><br>
     
     <hr>
     <!-- Formularios -->
