Pasteleria, Formulario y Pastelero

--- a/pasteleria/pastelero.html
+++ b/pasteleria/pastelero.html
@@ -13,6 +13,96 @@
         <center>
         <img src="\imagenes\logo2.png" alt="" style="position: center;">
     </center>
+ <center>
+    <section>
+        <table>
+            <tr>
+              <th>Numero de pedido   |</th>
+              <th>Nombre   |</th> <br>
+              <th>Apellido   |</th>
+              <th>Fecha de pedido    |</th>
+              <th>Fecha en el que requiere el pastel   |</th>
+              <th>Sabor del pan (Combinacion)                          |</th>
+              <th>Adorno    |</th>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Roberto</td>
+              <td>Diaz</td>
+              <td>01/03/22</td>
+              <td>23/03/22</td>
+              <td>Chocolate con nuez</td>
+              <td>Aniversario</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Karen</td>
+                <td>Hernandez</td>
+                <td>01/03/22</td>
+                <td>15/03/22</td>
+                <td>Naranja</td>
+                <td>Cumpleaños</td>
+              </tr>
+
+              <tr>
+                <td>4</td>
+                <td>Fernanda</td>
+                <td>Lopez</td>
+                <td>28/02/22</td>
+                <td>15/03/22</td>
+                <td>Fresa</td>
+                <td>Bautizo</td>
+              </tr>
+
+              <tr>
+                <td>6</td>
+                <td>Miguel</td>
+                <td>Vargas</td>
+                <td>28/02/22</td>
+                <td>15/03/22</td>
+                <td>Limon</td>
+                <td>Graduacion</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>Valery</td>
+                <td>Varela</td>
+                <td>28/02/22</td>
+                <td>15/03/22</td>
+                <td>Limon</td>
+                <td>Graduacion</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>Lilia</td>
+                <td>Rodriguez</td>
+                <td>28/02/22</td>
+                <td>15/03/22</td>
+                <td>Limon</td>
+                <td>Graduacion</td>
+              </tr>
+              <tr>
+                <td>15</td>
+                <td>Javier</td>
+                <td>Hernandez</td>
+                <td>28/02/22</td>
+                <td>15/03/22</td>
+                <td>Limon</td>
+                <td>Graduacion</td>
+              </tr>
+              <tr>
+                <td>17</td>
+                <td>Daniel</td>
+                <td>Romero</td>
+                <td>28/02/22</td>
+                <td>15/03/22</td>
+                <td>Limon</td>
+                <td>Graduacion</td>
+              </tr>
+          </table>
+
+    </section>
+</center>
 
     </div>
 </body>
