--- a/pasteleria/pastelero.html
+++ b/pasteleria/pastelero.html
@@ -17,13 +17,13 @@
     <section>
         <table>
             <tr>
-              <th>Numero de pedido   |</th>
-              <th>Nombre   |</th> <br>
-              <th>Apellido   |</th>
-              <th>Fecha de pedido    |</th>
-              <th>Fecha en el que requiere el pastel   |</th>
-              <th>Sabor del pan (Combinacion)                          |</th>
-              <th>Adorno    |</th>
+              <th>Numero de pedido   </th>
+              <th>Nombre   </th> <br>
+              <th>Apellido   </th>
+              <th>Fecha de pedido    </th>
+              <th>Fecha entrega  </th>
+              <th>Sabor del pan   </th>
+              <th>Adorno    </th>
             </tr>
             <tr>
               <td>1</td>
